# TaskbarLyrics

./: .gitignore  CMakeLists.txt  CODE_REVIEW.md  LICENSE  MoeKoeMusic_TaskbarLyrics_开发文档.md  README.md  ROADMAP.md  build.cmd  convert_icon.py  vcpkg.json  代码审查报告.md  代码审查报告_进阶版.md  当前考虑的方向.md  计划书.md  项目状态文档.md
.github/workflows/: build.yml  release.yml
extension/: background.js  manifest.json  popup.html  popup.js
moeKoe-taskbar-lyrics/: background.js  content.js  manifest.json  native-bridge.html  native-bridge.js  popup.html  popup.js
moeKoe-taskbar-lyrics/resources/: settings.html
native_host/: install_host.bat  moekoe_taskbar_lyrics.json  uninstall_host.bat
resources/: settings.html
scripts/: pack_zip.py  package.ps1
src/: api_enabler.cpp  api_enabler.h  app_icon.rc  color_picker.cpp  color_picker.h  color_utils.h  config.cpp  config.h  config_dialog.cpp  constants.h  d2d_settings_window.cpp  d2d_settings_window.h  http_server.cpp  http_server.h  lyrics_data.h  lyrics_parser.cpp  lyrics_parser.h  main.cpp  native_messaging.cpp  native_messaging.h  process_monitor.cpp  renderer.cpp  renderer.h  settings_draw_utils.h  settings_window.cpp  settings_window.h  spectrum_capture.cpp  spectrum_capture.h  taskbar_window.cpp  taskbar_window.h  tray_icon.cpp  tray_icon.h  websocket_client.cpp  websocket_client.h
